base/bastion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bastion
spec:
  selector:
    matchLabels:
      app: bastion
  template:
    metadata:
      labels:
        app: bastion
    spec:
      #volumes:
      #- name: data
        #persistentVolumeClaim:
          #claimName: test-pvc
      containers:
      - name: bastion
        image: ghcr.io/john2143/better_gha_runner:latest
        command: ["sleep", "86400"]
        #volumeMounts:
        #- name: data
          #mountPath: /data
---
