base/tailscale-exit.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tailscale-exit
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tailscale-exit
  template:
    metadata:
      labels:
        app: tailscale-exit
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: tailscale-exit
      containers:
      - name: tailscale
        image: tailscale/tailscale:latest
        securityContext:
          privileged: true
          capabilities:
            add: ["NET_ADMIN"]
      - name: alloy
        image: grafana/alloy:v1.17.0
        args: ["run", "/etc/alloy/config.alloy"]
        volumeMounts:
          - name: varlog
            mountPath: /var/log
            readOnly: true
          - name: alloy-config
            mountPath: /etc/alloy
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: alloy-config
        configMap:
          name: alloy-config
