base/deployment-tor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tor-middle
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: tor-middle
  template:
    metadata:
      labels:
        app: tor-middle
        servicegroup: "infrastructure"
    spec:
      hostNetwork: true
      nodeSelector:
        doks.digitalocean.com/node-pool: pool-medium
      terminationGracePeriodSeconds: 120
      containers:
      - name: tor
        image: ghcr.io/2143-labs/tor:latest
        command: ["tor"]
        args: ["-f", "/etc/tor/torrc"]
        volumeMounts:
        - name: config
          mountPath: /etc/tor
        - name: data
          mountPath: /var/lib/tor
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "768Mi"
            cpu: "500m"
      volumes:
      - name: config
        configMap:
          name: tor-config
      - name: data
        persistentVolumeClaim:
          claimName: tor-data
---
apiVersion: v1
kind: Service
metadata:
  name: tor-middle
spec:
  type: NodePort
  ports:
  - port: 30901
    targetPort: 30901
    nodePort: 30901
    protocol: TCP
    name: tor
  selector:
    app: tor-middle
