base/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: john2143-com
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: john2143-com
  template:
    metadata:
      labels:
        app: john2143-com
        servicegroup: "mine"
      annotations:
        linkerd.io/inject: disabled
    spec:
      serviceAccountName: john2143-com
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: files-pvc
      #securityContext:
        #runAsUser: 1000
        #runAsGroup: 1000
        #fsGroup: 1000

      containers:
      - name: john2143-com
        image: imagehost:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: &port 3000
        volumeMounts:
        - mountPath: /app/juushFiles
          name: data-volume
        resources:
          requests:
            memory: "128Mi"
            cpu: "10m"
          limits:
            memory: "384Mi"
            cpu: "1000m"

        livenessProbe:
          httpGet:
            path: /health
            port: *port
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 5

        readinessProbe:
          httpGet:
            path: /health
            port: *port
          initialDelaySeconds: 1
          periodSeconds: 5
          failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: john2143-com
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: john2143-com
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
        servicegroup: "mine"
      annotations:
        linkerd.io/inject: disabled
    spec:
      volumes:
      - name: mongodata
        persistentVolumeClaim:
          claimName: mongo-pvc

      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017

        volumeMounts:
          - mountPath: /data/db
            name: mongodata

        resources:
          requests:
            memory: "330Mi"
            cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
    name: http
  selector:
    app: mongo
