base/endpoint-base.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: home-endpoint
subsets:
  - addresses:
      - ip: 123.123.123.123
    ports:
      - name: http
        port: 80
      - name: https
        port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: home-endpoint
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  #selector:
    #app: home-endpoint
