base/service-mongo-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-nodeport
  labels:
    app: mongo
spec:
  type: NodePort
  selector:
    app: mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
      nodePort: 32040
