base/temporal.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-temporal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-temporal
  template:
    metadata:
      labels:
        app: postgres-temporal
    spec:
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: temporal-pg-pvc
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: pgdata
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-temporal
spec:
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  selector:
    app: postgres-temporal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal
  template:
    metadata:
      labels:
        app: temporal
        servicegroup: "mine"
    spec:
      containers:
      - name: temporal
        image: temporalio/auto-setup:1.25.2
        ports:
        - containerPort: 7233
          name: grpc
        - containerPort: 8233
          name: http
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: temporal
spec:
  ports:
  - port: 7233
    targetPort: 7233
    protocol: TCP
    name: grpc
  - port: 8233
    targetPort: 8233
    protocol: TCP
    name: http
  selector:
    app: temporal
