base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cafe
  namespace: default
  #annotations:
    #cert-manager.io/issuer: letsencrypt-prod
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    #hostname: 2143.christmas
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same

  #- name: https
    #hostname: 2143.christmas
    #port: 443
    #protocol: HTTPS
    #allowedRoutes:
      #namespaces:
        #from: Same
    #tls:
      #mode: Terminate
      #certificateRefs:
      #- kind: Secret
        #name: cafe-tls-key-prod
        #namespace: default
#---
#apiVersion: gateway.networking.k8s.io/v1beta1
#kind: ReferenceGrant
#metadata:
  #name: access-to-cafe-secret
  #namespace: cert-manager
#spec:
  #to:
  #- group: ""
    #kind: Secret
    #name: cafe-secret-staging # if you omit this name, then Gateways in default ns can access all Secrets in the certificate ns
  #from:
  #- group: gateway.networking.k8s.io
    #kind: Gateway
    #namespace: default
