base/deployments-openfront-discordbot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openfront-api-discordbot
  namespace: tk
spec:
  replicas: 0
  selector:
    matchLabels:
      app: openfront-api-discordbot
  template:
    metadata:
      labels:
        app: openfront-api-discordbot
        servicegroup: "mine"
    spec:
      serviceAccountName: openfront-api-discordbot
      containers:
      - name: openfront-api-discordbot
        image: bot:latest
        imagePullPolicy: Always
        ports:
        - containerPort: &port 3000
        resources:
          requests:
            memory: "100Mi"
            cpu: "20m"
          limits:
            memory: "300Mi"
            cpu: "100m"

        livenessProbe:
          httpGet:
            path: /ping
            port: *port
          initialDelaySeconds: 30
          periodSeconds: 5
          failureThreshold: 3

        readinessProbe:
          httpGet:
            path: /ping
            port: *port
          initialDelaySeconds: 30
          periodSeconds: 6
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: openfront-api-discordbot
  namespace: tk
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: openfront-api-discordbot
# This route maps tkbot.openfront.pro to the above service
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openfront-api-discordbot
spec:
  parentRefs:
  - name: apps-gateway
  hostnames:
  - "tkbot.openfront.pro"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      # name of the service
    - name: openfront-api-discordbot
      port: 80
      namespace: tk
---

### Namespaces, service accounts, roles, and role bindings ###



---
# Add the namspace "tk"
apiVersion: v1
kind: Namespace
metadata:
  name: tk
  labels:
    name: tk
    servicegroup: "mine"
---
# We need a referencegrant because cafe is in the default namespace and the service is in tk namespace
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: openfront-api-discordbot-grant
  namespace: tk
spec:
  from:
  - kind: HTTPRoute
    group: gateway.networking.k8s.io
    namespace: default
  to:
  - kind: Service
    group: ""

# This is the service account for the deployment
---
