base/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mongo-proxy
  namespace: default
spec:
  parentRefs:
    - name: apps-gateway
      sectionName: mongo-proxy
  rules:
    - backendRefs:
        - name: mongo
          port: 27017
